AM_CPPFLAGS = -I$(top_srcdir)/include
AM_CFLAGS = @GPROM_CFLAGS@

noinst_LTLIBRARIES        		= libanalysis.la
libanalysis_la_SOURCES       	= translator.c translator_oracle.c translator_dl.c translate_update.c analyzer.c analyze_oracle.c analyze_dl.c parameter.c analyze_sqlite.c translator_sqlite.c
libanalysis_la_LIBADD        	= 
